--- a/src/app/pago-servicios/pago-servicios.component.html
+++ b/src/app/pago-servicios/pago-servicios.component.html
@@ -1,73 +1,42 @@
-<!--<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-
-<div class="container"> 
-    <div class="search-box">
-        <input type="search-txt" name="" placeholder="Buscar empresa">
-        <a class="search-btn" href="#">
-            <i class="fas fa-search"></i>
-
-        </a>
-    </div>
-    <br><br>
-    <h5>Todo al alcance de tus manos</h5>
-</div>
--->
-
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
-  </head>
-  <body>
+<body>
   <div class="container">
-    <div class="card">
-      <h3 class="title">Agua</h3>
-      <!--<div class="bar">
-        <div class="emptybar"></div>
-        <div class="filledbar"></div>
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card">
+          <h3 class="title">Agua</h3>
+          <img src="https://image.flaticon.com/icons/png/512/2385/2385538.png" class="imagen">
+          <div class="pagar">
+            <button class="btn" (click)="open1()">Pagar</button>
+          </div>
+        </div>
       </div>
-      <div class="circle">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <circle class="stroke" cx="60" cy="60" r="50"/>
-      </svg>
-      </div>-->
-      <div class="stroke">
-        <button class="btn">Pagar</button>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card">
+          <h3 class="title">Gas</h3>
+          <img src="https://image.flaticon.com/icons/png/512/2296/2296881.png" class="imagen">
+          <div class="pagar">
+            <button class="btn" (click)="open2()">Pagar</button>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <h3 class="title">Gas</h3>
-      <!--<div class="bar">
-        <div class="emptybar"></div>
-        <div class="filledbar"></div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card">
+          <h3 class="title">Luz</h3>
+          <img src="https://image.flaticon.com/icons/png/512/2385/2385519.png" class="imagen">
+          <div class="pagar">
+            <button class="btn" (click)="open3()">Pagar</button>
+          </div>
+        </div>
       </div>
-      <div class="circle">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <circle class="stroke" cx="60" cy="60" r="50"/>
-      </svg>
-      </div>-->
-    </div>
-    <div class="card">
-      <h3 class="title">Luz</h3>
-      <!--<div class="bar">
-        <div class="emptybar"></div>
-        <div class="filledbar"></div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card">
+          <h3 class="title">Internet</h3>
+          <img src="https://image.flaticon.com/icons/png/512/929/929464.png" class="imagen">
+          <div class="pagar">
+            <button class="btn" (click)="open4()">Pagar</button>
+          </div>
+        </div>
       </div>
-      <div class="circle">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <circle class="stroke" cx="60" cy="60" r="50"/>
-      </svg>
-      </div>-->
-    </div>
-    <div class="card">
-      <h3 class="title">Internet</h3>
-      <!--<div class="bar">
-        <div class="emptybar"></div>
-        <div class="filledbar"></div>
-      </div>
-      <div class="circle">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <circle class="stroke" cx="60" cy="60" r="50"/>
-      </svg>
-      </div>-->
     </div>
   </div>
-  </body>
+</body>
